<resources>
    <string name="app_name">海豚防丢</string>
    <string name="welcome_name">海豚防丢IC卡</string>
    <string name="system_image_back">Back</string>
    <string name="system_image_logo">Logo</string>
    <string name="system_image_setting">Setting</string>
    <string name="system_image_search">Search</string>
    <string name="system_rmb">￥</string>
    <string name="system_zfb">Alipay</string>
    <string name="system_bankcard">Card</string>
    <string name="system_shibi">Shibi</string>
    <string name="system_backmomey">Return</string>
    <string name="system_deal">Group</string>
    <string name="system_submit">Submit</string>
    <string name="system_cancel">Cancel</string>
    <string name="system_sure">Confirm</string>
    <string name="system_sureifexit">Are you sure to exit?</string>
    <string name="system_exit">Exit</string>
    <string name="system_delete">Delete</string>
    <string name="login_edittext_phone">Phone Number</string>
    <string name="login_edittext_password">Password</string>
    <string name="login_button_login">Login</string>
    <string name="login_textview_forgetpassword">Forget password？</string>
    <string name="login_textview_register">Register</string>
    <string name="login_success">Login success</string>
    <string name="register_edittext_phone">Phone number</string>
    <string name="register_edittext_code">Verify code</string>
    <string name="register_button_code">Get code</string>
    <string name="register_edittext_name">Name</string>
    <string name="register_radiobutton_sex">Sex</string>
    <string name="register_radiobutton_man">Male</string>
    <string name="register_radiobutton_woman">Female</string>
    <string name="register_edittext_password">Password(6 to 12)</string>
    <string name="register_edittext_confirm_password">Confirm password</string>
    <string name="register_button_register">Register</string>
    <string name="register_textview_warning">Registering means you are agree with</string>
    <string name="register_textview_protocol">  <a href="">the user protocol.</a></string>
    <string name="register_protocol">user protocol</string>
    <string name="str_get_code">get code</string>
    <string name="menuways_bookmenu">Menu</string>
    <string name="menuways_shopmenu">现场点菜</string>
    <string name="menuways_submit">提交预定</string>
    <string name="main_tabtext_shop">店铺</string>
    <string name="main_tabtext_order">订单</string>
    <string name="main_tabtext_person">My</string>
    <string name="city_select">select city</string>
    <string name="city_unknown">Unknown</string>
    <string name="main_tabtext_device">Device</string>
    <string name="main_tabtext_camera">Camera</string>
    <string name="main_tabtext_location">Location</string>
    <string name="main_tabtext_setting">Setting</string>
    <string name="main_tabtext_info">Info</string>
    <string name="shop_list_section_discount">discount</string>
    <string name="shop_list_section_type">type</string>
    <string name="shop_list_section_service">service</string>
    <string name="shop_list_image_fresh">refresh</string>
    <string name="shop_list_curcity">current city:</string>
    <string name="shop_list_city_exchange">switch</string>
    <string-array name="discount_arr">
        <item>99</item>
        <item>95</item>
        <item>90</item>
        <item>85</item>
        <item>80</item>
        <item>75</item>
        <item>70</item>
    </string-array>
    <string-array name="server_arr">
        <item>预定</item>
        <item>点餐</item>
        <item>团购</item>
        <item>会员卡</item>
    </string-array>
    <string name="shop_search_edit_hint">搜索店铺名</string>
    <string name="shop_search_button_clear">清除所有搜索记录</string>
    <string name="shop_detail_shop_detail">店铺服务</string>
    <string name="shop_detail_logo">Shop Logo</string>
    <string name="shop_detail_collect">收藏</string>
    <string name="shop_momey">元</string>
    <string name="shop_detail_reserve">预定</string>
    <string name="shop_detail_order">点菜</string>
    <string name="shop_detail_group">团购</string>
    <string name="shop_detail_card">会员优惠</string>
    <string name="shop_detail_pay">支付</string>
    <string name="shop_detail_comment">消费评价</string>
    <string name="shop_detail_score">分</string>
    <string name="shop_detail_comment_detail">【详情】</string>
    <string name="shop_detailmsg_title">团购详情</string>
    <string name="shop_detailmsg_time">营业时间</string>
    <string name="shop_detailmsg_route">路线</string>
    <string name="shop_detailmsg_tablecondition">店铺评价</string>
    <string name="shop_detailmsg_showtable">显示所有餐台</string>
    <string name="shop_detailmsg_shopproduce">店铺介绍</string>
    <string name="shop_detailmsg_showdetail">显示所有</string>
    <string name="shop_map_driving">驾车</string>
    <string name="shop_map_bus">公交</string>
    <string name="shop_map_walking">步行</string>
    <string name="shop_map_noresult">抱歉，未找到结果</string>
    <string name="shop_map_search_route">查看路线</string>
    <string name="shop_deal_title">团购</string>
    <string name="shop_deal_detail_title">团购详情</string>
    <string name="shop_deal_detail_result_price">单价：</string>
    <string name="shop_deal_detail_result_num">数量：</string>
    <string name="shop_deal_detail_result_sum">总价：</string>
    <string name="shop_deal_detail_code">团购验证码：</string>
    <string name="shop_deal_detail_validity">有效期为：</string>
    <string name="shop_deal_detail_result_bindphone">您绑定的手机号码</string>
    <string name="shop_deal_detail_result_bindnew">绑定新的手机号</string>
    <string name="shop_deal_refund_ways">退款方式</string>
    <string name="shop_deal_refund_name">姓名</string>
    <string name="shop_deal_refund_email">邮箱</string>
    <string name="shop_deal_refund_relateways">联系方式</string>
    <string name="shop_deal_refund_bank">银行</string>
    <string name="shop_deal_refund_accountbank">开户行</string>
    <string name="shop_deal_refund_accountperson">开户人</string>
    <string name="shop_book_personnum">人数</string>
    <string name="shop_book_personname">姓名</string>
    <string name="shop_book_picktime">选择时间</string>
    <string name="shop_book_pickbooth">选择包间</string>
    <string name="shop_book_sittype">座位类型</string>
    <string name="shop_book_booth">包间</string>
    <string name="shop_book_dating">大厅</string>
    <string name="shop_book_submit">提交订单</string>
    <string name="shop_book_yes">是</string>
    <string name="shop_book_no">否</string>
    <string name="shop_book_male">先生</string>
    <string name="shop_book_female">女士</string>
    <string name="shop_local_dialog_money">元</string>
    <string name="shop_local_dialog_title">请输入您预订的金额：</string>
    <string name="shop_local_dialog_title1">请输入现金金额：</string>
    <string name="shop_local_dialog_btn">确认支付</string>
    <string name="shop_menu_search">搜索</string>
    <string name="shop_menu_search_hint">想吃啥呢</string>
    <string name="shop_menu_main">招牌菜</string>
    <string name="shop_menu_show1">共</string>
    <string name="shop_menu_show2">道菜</string>
    <string name="shop_menu_submit">选好了</string>
    <string name="shop_menulist_releateman">订单联系人:</string>
    <string name="shop_menulist_releateway">联系方式:</string>
    <string name="shop_menulist_submit">提交</string>
    <string name="shop_vipcard_name">会员卡</string>
    <string name="order_main_section_record">预定</string>
    <string name="order_main_section_order">点餐</string>
    <string name="order_main_section_group">团购</string>
    <string name="order_detail_order_title">订单详情</string>
    <string name="order_detail_order_addmenu">加菜</string>
    <string name="order_detail_deal_title">团购订单详情</string>
    <string name="order_detail_refund_title">团购退款详情</string>
    <string name="order_detail_order_number">订单号：</string>
    <string name="order_detail_submit_time">提交时间：</string>
    <string name="order_detail_order_dish_name">已点菜品</string>
    <string name="order_detail_price">参考价</string>
    <string name="order_detail_total_price">总价</string>
    <string name="order_detail_alipay">支付宝</string>
    <string name="order_detail_cash">现金</string>
    <string name="order_detail_icon">食币</string>
    <string name="order_detail_comment">评价</string>
    <string name="order_detail_hascon">已消费</string>
    <string name="order_detail_order_msg">预订信息</string>
    <string name="order_detail_order_phone">联系电话</string>
    <string name="order_detail_order_checksuc">支付成功您可以前往：</string>
    <string name="order_detail_order_mylist">我的订单</string>
    <string name="order_detail_order_comment">评价</string>
    <string name="order_success">预定成功</string>
    <string name="operate_success">操作成功</string>
    <string name="order_deal_detail_order_number">订单号：</string>
    <string name="order_deal_detail_refund_money">退款金额：</string>
    <string name="person_main_text_title">个人中心</string>
    <string name="person_main_text_shop">店铺收藏</string>
    <string name="person_main_text_mycoin">我的食币</string>
    <string name="person_main_text_setting">设置</string>
    <string name="person_main_text_logout">注销</string>
    <string name="person_main_image_information">个人资料</string>
    <string name="person_main_image_title">个人中心</string>
    <string name="person_main_image_shop">店铺收藏</string>
    <string name="person_main_image_mycoin">我的食币</string>
    <string name="person_main_image_setting">设置</string>
    <string name="person_main_image_logout">注销</string>
    <string name="person_information_text_title">编辑资料</string>
    <string name="person_information_text_photo">头像</string>
    <string name="person_information_text_telephone">手机号码</string>
    <string name="person_information_text_name">姓名</string>
    <string name="person_information_text_sex">性别</string>
    <string name="person_information_text_password">修改密码</string>
    <string name="person_shop_text_title">店铺收藏</string>
    <string name="person_mycoin_text_title">我的食币</string>
    <string name="person_mycoin_text_mycoin">您的食币为：</string>
    <string name="person_mycoin_text_coin">币</string>
    <string name="person_mycoin_text_deposit">充值</string>
    <string name="mycoint_item_text1">您于</string>
    <string name="mycoint_item_text2">充值</string>
    <string name="mycoint_item_text3">元</string>
    <string name="person_setting_text_title">设置</string>
    <string name="person_setting_text_aboutus">关于我们</string>
    <string name="person_setting_text_clean">清理缓存</string>
    <string name="person_setting_text_advitise">意见反馈</string>
    <string name="person_setting_text_explain">免责声明</string>
    <string name="person_setting_text_update">版本更新</string>
    <string name="person_feedback_text_title">意见反馈</string>
    <string name="person_feedback_edit_contenthint">请输入您的反馈意见(200字以内)</string>
    <string name="person_feedback_rating">请选择您的评分：</string>
    <string name="person_feedback_edit_relatethint">请输入您的邮箱和电话(选填)</string>
    <string name="person_feedback_btn_send">发送</string>
    <string name="person_feedback_btn_order_id">订单号：</string>
    <string name="person_password_text_title">修改密码</string>
    <string name="person_password_text_enter">请输入新密码</string>
    <string name="person_password_text_enteragain">请确认密码</string>
    <string name="person_password_btn_save">保存</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="confirm_title">Title</string>
    <string name="ensure">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="content_description_icon">icon</string>
    <string name="refresh">Refresh</string>
    <string name="processing">Loading</string>
    <string name="download">Download</string>
    <string name="download_fail">Download failed.</string>
</resources>