<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/home_radio_button_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="30dp"
            android:layout_gravity="bottom"
            android:gravity="center_vertical"
            android:background="#eeeeee"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/home_tab_device"
                style="@style/home_tab_bottom"
                android:checked="true"       
                android:textColor="@color/textcolor_normal"   
                android:text="@string/main_tabtext_device"
                android:drawableTop="@drawable/menuhome_selector" />

            <RadioButton
                android:id="@+id/home_tab_camera"
                style="@style/home_tab_bottom"
                android:drawableTop="@drawable/menuorder_selector"
                android:textColor="@color/textcolor_normal"
                android:text="@string/main_tabtext_camera" />

            <RadioButton
                android:id="@+id/home_tab_location"
                style="@style/home_tab_bottom"
                android:drawableTop="@drawable/menuperson_selector"
                android:textColor="@color/textcolor_normal"
                android:text="@string/main_tabtext_location" />

            <RadioButton
                android:id="@+id/home_tab_setting"
                style="@style/home_tab_bottom"
                android:drawableTop="@drawable/menuperson_selector"
                android:textColor="@color/textcolor_normal"
                android:text="@string/main_tabtext_setting" />

            <RadioButton
                android:id="@+id/home_tab_info"
                style="@style/home_tab_bottom"
                android:drawableTop="@drawable/menuperson_selector"
                android:textColor="@color/textcolor_normal"
                android:text="@string/main_tabtext_info" />

        </RadioGroup>
    </LinearLayout>

</TabHost>