<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/second"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/border_gray"
    android:orientation="vertical" >

    <Button
        android:id="@+id/Button01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/blue_btn_text"
        android:padding="10dp"
        android:text="@string/system_shibi"
        android:textColor="@color/text_white"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/headbg" >

     <ImageView
                android:id="@+id/back"
	            android:layout_width="50dp"
	            android:layout_height="wrap_content"
	            android:src="@drawable/back_selector"
	            android:padding="10dp"
	            android:background="@drawable/null_btn_text"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/text_head"
            android:text="@string/order_detail_order_title" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_white"
            android:padding="5dp"
            android:text="@string/system_deal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/text_white"
        android:padding="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_deal_detail_order_number"
            android:textColor="#FF0000" />

        <TextView
            android:id="@+id/order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF0000" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#aaaaaa" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/text_white"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/personmainShop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/shop_deal_detail_result_price" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/person_main_image_shop"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#aaaaaa" />

        <LinearLayout
            android:id="@+id/personmainShop2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/shop_deal_detail_result_num" />

            <TextView
                android:id="@+id/num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/person_main_image_shop"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#aaaaaa" />

        <LinearLayout
            android:id="@+id/personmainShop3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/shop_deal_detail_result_sum" />

            <TextView
                android:id="@+id/total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/person_main_image_shop"
                android:textColor="#FF0000" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/text_white"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/codeLin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="10dp" 
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/shop_deal_detail_code" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="未使用"
                    android:textColor="@color/textbg_red" />
            </LinearLayout>

            <TextView
                android:id="@+id/dealcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/border_gray"
                android:gravity="center"
                android:padding="10dp"/>
           <LinearLayout 
               android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_margin="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shop_deal_detail_validity" />
            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/refund_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:background="@drawable/blue_btn_text"
        android:text="@string/system_backmomey"
        android:textColor="@color/text_white"
        android:visibility="gone" />
    <Button
        android:id="@+id/comment_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:background="@drawable/blue_btn_text"
        android:text="@string/order_detail_order_comment"
        android:textColor="@color/text_white"
        android:visibility="gone" />
    <Button
        android:id="@+id/zfb_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/system_zfb"
        android:textColor="@color/text_white"
        android:background="@drawable/blue_btn_text"
        android:visibility="gone" />

   <Button
        android:id="@+id/shibi_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:text="@string/system_shibi"
        android:textColor="@color/text_white" 
        android:background="@drawable/blue_btn_text"
        android:visibility="gone"/> 
    

</LinearLayout>