<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:padding="5dp"
    android:orientation="horizontal" >
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView 
             
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:text="@string/mycoint_item_text1"
	         android:textColor="#aaaaaa"/>
	    
	    <TextView 
	         android:id="@+id/dtime"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:text="2014-10-31 10:20:00"
	         android:textColor="#aaaaaa"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
        <TextView 
	        android:id="@+id/add"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="#aaaaaa"
	        android:gravity="right"
	        android:text="@string/mycoint_item_text2"/>
	    
	    <TextView 
	        android:id="@+id/money"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="#aaaaaa"
	        android:text="100"/>
	    
	    <TextView 
	       android:id="@+id/price"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:textColor="#aaaaaa"
	       android:text="@string/mycoint_item_text3"/>
    </LinearLayout>
    
    

        
</RelativeLayout>
    
